# g3d-cvs

./: .cvsignore  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  Doxyfile  Doxyfile-java  G3DConfig.cmake.in  buildg3d  buildg3d.bat  buildg3d2  buildlib.py  cmakeutil  wininstaller.nsi
G3D.lib/: .cvsignore  CMakeLists.txt  ice.txt
G3D.lib/include/G3D/: AABSPTree.h  AABox.h  AVIInput.h  Any.h  AnyVal.h  AreaMemoryManager.h  Array.h  AtomicInt32.h  BinaryFormat.h  BinaryInput.h  BinaryOutput.h  BoundsTrait.h  Box.h  Box2D.h  BumpMapPreProcess.h  CameraLocation.h  Capsule.h  CoherentAllocator.h  CollisionDetection.h  Color1.h  Color1uint8.h  Color3.h  Color3uint8.h  Color4.h  Color4uint8.h  Cone.h  ConvexPolyhedron.h  CoordinateFrame.h  Crypto.h  Cylinder.h  DebugTimer.h  Discovery.h  EqualsTrait.h  FileSystem.h  G3D.h  G3DAll.h  G3DGameUnits.h  GCamera.h  GImage.h  GLight.h  (+79 more)
G3D.lib/source/: AABox.cpp  AVIInput.cpp  Any.cpp  AnyVal.cpp  AreaMemoryManager.cpp  BinaryFormat.cpp  BinaryInput.cpp  BinaryOutput.cpp  Box.cpp  Box2D.cpp  BumpMapPreProcess.cpp  CameraLocation.cpp  Capsule.cpp  CoherentAllocator.cpp  CollisionDetection.cpp  Color1.cpp  Color1uint8.cpp  Color3.cpp  Color3uint8.cpp  Color4.cpp  Color4uint8.cpp  Cone.cpp  ConvexPolyhedron.cpp  CoordinateFrame.cpp  Crypto.cpp  Crypto_md5.cpp  Cylinder.cpp  DebugTimer.cpp  Discovery.cpp  FileSystem.cpp  GCamera.cpp  GImage.cpp  GImage_bayer.cpp  GImage_bmp.cpp  GImage_jpeg.cpp  GImage_png.cpp  GImage_ppm.cpp  GImage_tga.cpp  GLight.cpp  GThread.cpp  (+61 more)
GLG3D.lib/: CMakeLists.txt  ice.txt
GLG3D.lib/include/GLG3D/: ArticulatedModel.h  BSPMAP.h  BackgroundWidget.h  BumpMap.h  CameraControlWindow.h  CarbonWindow.h  Component.h  DXCaps.h  DeveloperWindow.h  DirectionHistogram.h  Discovery.h  Discovery2.h  Draw.h  FileDialog.h  Film.h  FirstPersonManipulator.h  Framebuffer.h  G3D_SDL_event.h  GApp.h  GApp2.h  GBuffer.h  GConsole.h  GEntity.h  GEvent.h  GFont.h  GKey.h  GLCaps.h  GLG3D.h  GModule.h  GPUProgram.h  GWindow.h  GaussianBlur.h  GenericPosedModel.h  GenericSurface.h  GuiButton.h  GuiCaption.h  GuiCheckBox.h  GuiContainer.h  GuiControl.h  GuiDropDownList.h  (+68 more)
GLG3D.lib/include/GLG3D/GL/: gl.h  glew.h  glext.h  glxew.h  wglew.h
GLG3D.lib/source/: ArticulatedModel.cpp  ArticulatedModel_OBJ.cpp  ArticulatedModel_Operation.cpp  ArticulatedModel_pose.cpp  BSPMAP.cpp  BSPMAPLoad.cpp  BackgroundWidget.cpp  BumpMap.cpp  CameraControlWindow.cpp  CarbonWindow.cpp  Component.cpp  DDSTexture.cpp  DXCaps.cpp  DeveloperWindow.cpp  DirectionHistogram.cpp  Discovery.cpp  Discovery2.cpp  Draw.cpp  FileDialog.cpp  Film.cpp  FirstPersonManipulator.cpp  Framebuffer.cpp  G3DGameUnits.cpp  GApp.cpp  GApp2.cpp  GBuffer.cpp  GConsole.cpp  GEntity.cpp  GEvent.cpp  GFont.cpp  GKey.cpp  GLCaps.cpp  GModule.cpp  GPUProgram.cpp  GWindow.cpp  GaussianBlur.cpp  GenericPosedModel.cpp  GenericSurface.cpp  GuiButton.cpp  GuiCaption.cpp  (+72 more)
GLG3D.lib/source/GL/: glew.c
VC10/: G3D.sln  G3D.vcxproj  G3D.vcxproj.filters  GLG3D.lib.vcxproj  GLG3D.lib.vcxproj.filters  jpeg.lib.vcxproj  jpeg.lib.vcxproj.filters  png.lib.vcxproj  png.lib.vcxproj.filters  starter.vcxproj  starter.vcxproj.filters  zip.lib.vcxproj  zip.lib.vcxproj.filters  zlib.lib.vcxproj  zlib.lib.vcxproj.filters
VC8/: .cvsignore  CopyIfNewer.vcproj  G3D.lib.vcproj  G3D.sln  GLG3D.lib.vcproj  documentation.vcproj  gfxmeter.vcproj  jpeg.lib.vcproj  models.vcproj  png.lib.vcproj  scratch.vcproj  shader.vcproj  starter.vcproj  test.vcproj  viewer.vcproj  zip.lib.vcproj  zlib.lib.vcproj
VC9/: .cvsignore  CopyIfNewer.vcproj  Documentation.vcproj  G3D.lib.vcproj  G3D.sln  GLG3D.lib.vcproj  documentation.vcproj  geometryShader.vcproj  gfxmeter.vcproj  jpeg.lib.vcproj  minGlut.vcproj  models.vcproj  mongoose.lib.vcproj  mongose.lib.vcproj  multiview.vcproj  network.vcproj  (+14 more)
demos/empty/: CMakeLists.txt  main.cpp
demos/models/: App.cpp  App.h  CMakeLists.txt  Entity.h  copyright.txt  loadScene.cpp  main.cpp
demos/models/data-files/: g3d-license.txt  log.txt
demos/shader/: CMakeLists.txt
demos/shader/data-files/: phong.pix  phong.vrt
demos/shader/source/: main.cpp
demos/starter/: App.cpp  App.h  CMakeLists.txt  Scene.cpp  Scene.h  ice.txt  main.cpp  starter.sln  starter.vcproj
demos/starter/data-files/scene/: crates.txt
demos/starter/source/: App.cpp  Scene.cpp  Scene.h
gfxmeter/: CMakeLists.txt  ice.txt
gfxmeter/source/: App.h  Report.h  main.cpp  measureVertexPerformance.cpp
jpeg.lib/: CMakeLists.txt
jpeg.lib/include/jpeg/: jconfig.h
jpeg.lib/source/: jcinit.c  jmemansi.c
png.lib/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  tAABSPTree.cpp  tAABox.cpp  tAny.cpp  tArray.cpp  tAtomicInt32.cpp  tBinaryIO.cpp  tCallback.cpp  tCollisionDetection.cpp  tFileSystem.cpp  tGChunk.cpp  tGThread.cpp  tImageConvert.cpp  tKDTree.cpp  tMap2D.cpp  tMatrix.cpp  tMatrix3.cpp  tMeshAlgAdjacency.cpp  tMeshAlgTangentSpace.cpp  tPointHashGrid.cpp  tQuat.cpp  tQueue.cpp  tRandom.cpp  tReferenceCount.cpp  tReliableConduit.cpp  tSpline.cpp  tSystemMemcpy.cpp  tSystemMemset.cpp  tTable.cpp  tTextInput.cpp  tTextInput2.cpp  tTextOutput.cpp  tWeakCache.cpp  tfilter.cpp  tuint128.cpp  tzip.cpp
test/data-files/: Any-load.txt
tools/gfxmeter/: CMakeLists.txt  ice.txt
tools/gfxmeter/source/: App.h  Report.cpp  Report.h  main.cpp  measureVertexPerformance.cpp  speed.cpp
tools/viewer/: App.cpp  App.h  ArticulatedViewer.cpp  ArticulatedViewer.h  BSPViewer.cpp  BSPViewer.h  CMakeLists.txt  EmptyViewer.cpp  EmptyViewer.h  FontViewer.cpp  FontViewer.h  GUIViewer.cpp  GUIViewer.h  IFSViewer.cpp  IFSViewer.h  IconSetViewer.cpp  IconSetViewer.h  MD2Viewer.cpp  MD2Viewer.h  SkyViewer.cpp  SkyViewer.h  TextureViewer.cpp  TextureViewer.h  VideoViewer.cpp  VideoViewer.h  Viewer.h  main.cpp
zip.lib/: CMakeLists.txt  ice.txt
zip.lib/source/: config.h  mkstemp.c  zip.c  zip_name_locate.c  zipint.h
zlib.lib/: CMakeLists.txt
zlib.lib/include/: zconf.h
zlib.lib/include/zlib/: zconf.h
zlib.lib/source/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
(+233 files in other folders)
